Adding Bulk upload Metadata upload changes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,4 @@ spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
 server.servelet.connection-timeout=60000  # 60 seconds
 spring.mail.properties.mail.smtp.submitter.maxMessageSize=25MB
+spring.main.allow-circular-references=true
