Filling Document tables from zip file upload

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,6 +18,7 @@ server.servlet.context-path=/dms
 server.servlet.session.timeout=90m
 spring.mail.protocol=smtp
 file.upload-dir=C:\\DMS
+file.zip-dir=C:\\DMS\\zip
 #Email Send
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
