--- a/pom.xml
+++ b/pom.xml
@@ -56,6 +56,11 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
+		    <groupId>org.springframework</groupId>
+		    <artifactId>spring-test</artifactId>
+		    <version>6.2.10</version> <!-- Use version matching your Spring version -->
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<optional>true</optional>
