--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,17 +20,23 @@ spring.mail.protocol=smtp
 file.upload-dir=C:\\DMS
 file.zip-dir=C:\\DMS\\zip
 #Email Send
-spring.mail.host=smtp.gmail.com
+spring.mail.host=smtp.office365.com
 spring.mail.port=587
-spring.mail.username=amankumarthakur63@gmail.com
-spring.mail.password=fouy jjdu gkvu bwpg
+spring.mail.username=syntrack@synergizglobal.com
+spring.mail.password=@@Synergiz2025!
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
-spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.properties.mail.smtp.connectiontimeout=10000
+spring.mail.properties.mail.smtp.timeout=10000
+spring.mail.properties.mail.smtp.writetimeout=10000
+spring.mail.properties.mail.smtp.ssl.trust=smtp.office365.com
 spring.mail.properties.mail.smtp.ssl.protocols=TLSv1.2
+
+
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=50MB
 server.servelet.connection-timeout=60000  # 60 seconds
 spring.mail.properties.mail.smtp.submitter.maxMessageSize=25MB
 spring.main.allow-circular-references=true
+
