--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=DMS-1
 server.port=90
 # Primary DataSource (rfi - read/write)
-spring.datasource.jdbcUrl=jdbc:mysql://syntrack-product.cx7j14shahw3.ap-south-1.rds.amazonaws.com:3306/dms
+spring.datasource.jdbcUrl=jdbc:mysql://syntrack-product.cx7j14shahw3.ap-south-1.rds.amazonaws.com:3306/dms_local
 spring.datasource.username=synTrack
 spring.datasource.password=Ke$sie#9!0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
