Letter code field  and logout feat. added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,11 +7,13 @@ spring.datasource.password=Ke$sie#9!0
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
 # Secondary DataSource (pmis - read-only)
-pmis.datasource.jdbcUrl=jdbc:sqlserver://115.124.125.227:1433;databaseName=pmis_qa;encrypt=false;
+pmis.datasource.jdbcUrl=jdbc:sqlserver://115.124.125.227:1433;databaseName=pmis;encrypt=false;
 pmis.datasource.username=Synergiz
 pmis.datasource.password=$y^7r@(k1$pm1$
 pmis.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 # Run app under /dms instead of /
 server.servlet.context-path=/dms
 # Set session timeout to 90 minutes
@@ -23,7 +25,7 @@ file.zip-dir=C:\\DMS\\zip
 spring.mail.host=smtp.office365.com
 spring.mail.port=587
 spring.mail.username=syntrack@synergizglobal.com
-spring.mail.password=@@Synergiz2025!
+spring.mail.password=vxwlmvsyvflnlnhn
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
